making collectors.toList instead of tolist